--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "express": "^5.1.0",
     "express-flash": "^0.0.2",
     "express-session": "^1.18.2",
+    "express-sessions": "^1.0.6",
     "helmet": "^8.1.0",
     "joi": "^18.0.1",
     "method-override": "^3.0.0",
     "mongoose": "^8.19.2",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
